--- a/devenv.yml
+++ b/devenv.yml
@@ -57,6 +57,12 @@
         classic: true
         state: present
         
+    - name: "Install Discord"
+      community.general.snap:
+        name: discord
+        classic: true
+        state: present
+        
     - name: Does the Google apt file exist?
       command: test -f 
       register: google_apt_exists
