dotfile managemant here we go

--- a/devenv.yml
+++ b/devenv.yml
@@ -20,6 +20,13 @@
         name: curl
         state: present
 
+    - name: "Install Stow"
+      register: updatesys
+      apt:
+        update_cache: yes
+        name: stow
+        state: present
+
     - name: "Install Virtualbox"
       register: updatesys
       apt:
