--- a/setup.yml
+++ b/setup.yml
@@ -10,3 +10,4 @@
     - import_tasks: tasks/install.yml
     - import_tasks: tasks/base_config.yml
     - import_tasks: tasks/update_sources.yml
+    - import_tasks: tasks/gnome_settings.yml
