--- a/setup.yml
+++ b/setup.yml
@@ -7,7 +7,8 @@
     - vars/base_config.yml
 
   tasks:
-    - import_tasks: tasks/install.yml
+    - import_tasks: tasks/install_cli.yml
+    - import_tasks: tasks/install_gui.yml
     - import_tasks: tasks/base_config.yml
     - import_tasks: tasks/update_sources.yml
     - import_tasks: tasks/gnome_settings.yml
