--- a/tasks/install_gui.yml
+++ b/tasks/install_gui.yml
@@ -3,60 +3,20 @@
   become: yes
 
   tasks:
-    - name: "Install Virtualbox"
+    - name: "Install Gui"
       register: updatesys
       apt:
         update_cache: yes
-        name: virtualbox
-        state: present
-
-    - name: "Install Vagrant"
-      register: updatesys
-      apt:
-        update_cache: yes
-        name: vagrant
-        state: present
-
-    - name: "Install Libre Office"
-      register: updatesys
-      apt:
-        update_cache: yes
-        name: libreoffice
-        state: present
-
-    - name: "Install Calibre"
-      register: updatesys
-      apt:
-        update_cache: yes
-        name: calibre
-        state: present
-        
-    - name: "Install Inkscape"
-      community.general.snap:
-        name: inkscape
-        state: present
-
-    - name: "Install Gimp"
-      community.general.snap:
-        name: gimp
-        classic: true
-        state: present
-
-    - name: "Install Blender"
-      community.general.snap:
-        name: blender
-        classic: true
-        state: present
-
-    - name: "Install Visual Studio Code"
-      community.general.snap:
-        name: code
-        classic: true
-        state: present
-        
-    - name: "Install Discord"
-      community.general.snap:
-        name: discord
+        name: 
+          - virtualbox
+          - vagrant
+          - libreoffice
+          - calibre
+          - inkscape
+          - gimp
+          - blender
+          - code
+          - discord
         state: present
         
     - name: Does the Google apt file exist?
