Update install_gui.yml w snapd

--- a/tasks/install_gui.yml
+++ b/tasks/install_gui.yml
@@ -1,4 +1,11 @@
 ---
+- Name: "Install Snap"
+  apt:
+    update_cache: yes
+    name:
+      - snapd
+    state: present 
+
 - name: "Install Gui"
   vars:
     - apt_file: /etc/apt/sources.list.d/google-chrome.list
