--- a/tasks/install_gui.yml
+++ b/tasks/install_gui.yml
@@ -30,7 +30,7 @@
 - name: Does the Google apt file exist?
   vars:
     - apt_file: /etc/apt/sources.list.d/google.list
-  command: test -f 
+  command: test -f "{{ apt_file }}"
   register: google_apt_exists
   ignore_errors: True
       
