--- a/tasks/base_config.yml
+++ b/tasks/base_config.yml
@@ -1,3 +1,3 @@
 ---
 - name: Run base config script
-  ansible.builtin.command: sh base_config.sh
+  ansible.builtin.command: sh $PWD/tasks/base_config.sh
