--- a/tasks/gnome_settings.yml
+++ b/tasks/gnome_settings.yml
@@ -1,3 +1,3 @@
 ---
-- name: 
-  ansible.builtin.command: dconf load / < $HOME/.config/dconf/zozitak.txt
+- name: Gnome config
+  ansible.builtin.shell: dconf load / < $HOME/.config/dconf/zozitak.txt
