--- a/tasks/gnome_settings.yml
+++ b/tasks/gnome_settings.yml
@@ -1,3 +1,3 @@
 ---
 - name: Gnome config
-  ansible.builtin.shell: dconf load / < $HOME/.config/dconf/zozitak.txt
+  ansible.builtin.shell: sh $PWD/tasks/gnome_settings.sh
