--- a/tasks/install_gui.yml
+++ b/tasks/install_gui.yml
@@ -37,13 +37,13 @@
 - name: Add Google Chrome key
   vars:
     - apt_file: /etc/apt/sources.list.d/google.list
-  command: wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | gpg --dearmour -o /usr/share/keyrings/chrome-keyring.gpg 
+  shell: wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | gpg --dearmour -o /usr/share/keyrings/chrome-keyring.gpg 
   when: google_apt_exists.rc == 1
       
 - name: Add Google Chrome key
   vars:
     - apt_file: /etc/apt/sources.list.d/google.list
-  command: sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/chrome-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list'
+  shell: sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/chrome-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list'
   when: google_apt_exists.rc == 1
       
 - name: Update apt cache
